--- a/style.css
+++ b/style.css
@@ -1,29 +1,54 @@
-body {
+body,
+html {
     margin: 0;
-    padding: 20px;
+    padding: 0;
     font-family: sans-serif;
-    background-color: #f9f9f9;
-    text-align: center;
+    height: 100%;
+    overflow: hidden;
+    color: black;
 }
 
-button {
-    display: block;
-    margin: 10px auto;
-    padding: 12px 24px;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-}
-
-
-
-button:hover {
-    background-color: #0056b3;
+.pantalla {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
 }
 
 .pantalla-oculta {
-    display: none;
+    display: none !important;
+}
+
+.titulo-central {
+    font-size: 2em;
+    text-align: center;
+}
+
+.titulo {
+    margin-bottom: 20px;
+}
+
+/* Fondos por estado */
+.fondo-azul {
+    background-color: #8AC4D0;
+}
+
+.fondo-reglas {
+    background-color: #F9F3DD;
+}
+
+.fondo-escaner {
+    background-color: #fff;
+}
+
+.fondo-cargando {
+    background-color: #E8CAAE;
+}
+
+button {
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
 }
